# liberator

./: .dockerignore  .gitignore  Dockerfile  alltypes_c-ares.txt  alltypes_cjson.txt  alltypes_libtiff.txt  analysis.sh  api_list.txt  bootstrap_llvm.sh  connect_ssh.sh  copy_results.sh  exported_functions.txt  extract_analysis.sh  generate_profile.sh  generate_profiling.sh  gprof_to_excel.py  incomplete_types.txt  install_llvm.sh  plot_analysis_times.py  preinstall.sh  requirements.txt  run_all_targets.sh  run_analysis.sh  setup.sh  setup_target.sh  start_debugenv.sh  start_devenv.sh  test.py
.devcontainer/: devcontainer.json
_docs/: Analysis.md
condition_extractor/: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  GEMINI.md  README.md  bootstrap.sh  build.ninja  compile_commands.json  env.sh  mass_replace.py  test_clone  test_clone.cpp  test_clone2  test_clone2.cpp  test_clone_blocks.cpp  test_clone_blocks_dbg  test_clone_dbg
condition_extractor/include/: Config.h
condition_extractor/src/: AccessType.cpp  AccessType.h  AccessTypeHandler.cpp  AccessTypeHandler.h  AccessTypeIO.cpp  AccessTypeIO.h  CMakeLists.txt  ConditionExtractor.cpp  ConditionExtractor.hpp  Config.h  Config.h.in  DebugInfoParser.cpp  DebugInfoParser.hpp  Dominators.h  FileLogger.cpp  FileLogger.h  FunctionConditions.cpp  FunctionConditions.hpp  GenericDominatorTy.cpp  GenericDominatorTy.h  GlobalStruct.cpp  GlobalStruct.h  IBBG.cpp  IBBG.h  LibfuzzUtil.cpp  LibfuzzUtil.h  PhiFunction.cpp  PhiFunction.h  Profiler.hpp  SignatureMatching.cpp  SignatureMatching.hpp  TypeDeduction.hpp  TypeMatcher.cpp  TypeMatcher.h  Util.cpp  Util.hpp  ValueMetadata.cpp  ValueMetadata.hpp  extractor.cpp
condition_extractor/test/: test.s  test1.cpp
condition_extractor/test/assets/: sample1.json
condition_extractor/test/assets/svf_tests/: arrays.c  compile.sh  globals.c  struct_access.c
condition_extractor/tests/: CMakeLists.txt  config.h.in  debug.gdb  test_main.cpp
condition_extractor/tests/assets/: array_of_structs.c  arrays.c  complex_call_graph.c  control_flow.c  function_calls.c  function_pointers.c  nodwarf_forward_use.c  pointer_arithmetic.c  recursive.c  simple_phi.c  struct_access.c  test_classes.cpp  test_context.c  test_context1.c  test_malloc.c  test_meta.c  type_inference.c
custom-libfuzzer/fuzzer/: FuzzerDriver.cpp
docker/: run_analysis.sh
targets/: analysis.sh  generate_prof_remote.sh  start_analysis.sh  targets.txt
targets/c-ares/: analysis.sh  build_library.sh  config.sh  fetch.sh
targets/cjson/: analysis.sh  config.sh  fetch.sh
targets/cpu_features/: analysis.sh  config.sh  fetch.sh
targets/libaom/: analysis.sh  config.sh  fetch.sh
targets/libdwarf/: analysis.sh  config.sh  fetch.sh
targets/libhtp/: analysis.sh  config.sh  fetch.sh
targets/libpcap/: analysis.sh  config.sh  fetch.sh
targets/libplist/: analysis.sh  config.sh  fetch.sh  preinstall.sh
targets/libsndfile/: analysis.sh  config.sh  fetch.sh
targets/libtiff/: analysis.sh  config.sh  fetch.sh
targets/libucl/: analysis.sh  config.sh  fetch.sh
targets/libvpx/: analysis.sh  config.sh  fetch.sh
targets/libxml2/: analysis.sh  config.sh  fetch.sh
targets/littlecms/: analysis.sh  config.sh  fetch.sh
targets/minijail/: analysis.sh  config.sh  fetch.sh
targets/openh264/: analysis.sh  config.sh  fetch.sh
targets/openssl/: analysis.sh  config.sh  fetch.sh
targets/pthreadpool/: analysis.sh  config.sh  fetch.sh
targets/simple_connection/: config.sh
targets/sqlite/: analysis.sh  config.sh  fetch.sh
targets/uriparser/: analysis.sh  config.sh  fetch.sh
targets/zlib/: analysis.sh  config.sh  fetch.sh
tool/: main.py
tool/misc/: calc_api_over_time.py  extract_included_functions.py  make_table_ablation.py  plot_cumulative_coverage.py  plot_rq1.py
tool/misc/extract_param_names/: check_debug_info.py  param_names_extractor.py  param_names_extractor_tool.py
